# script-search

./: .env.example  .gitignore  ARCHITECTURE_INVARIANTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  golden_set.example.yaml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: architect.md  contrarian.md  evaluator.md  hacker.md  interviewer.md  ontologist.md  researcher.md  seed-architect.md  simplifier.md  topology.yaml
.claude/commands/: decompose.md  evaluate.md  evolve.md  install.md  interview.md  methodology.md  pm.md  review.md  rollback.md  run.md  seed.md  trd.md  unstuck.md
.github/workflows/: tests.yml
.harness/: detect-violations.sh
.harness/gates/: GATES.md  check-boundaries.sh  check-deps.sh  check-layers.sh  check-secrets.sh  (+3 more)
cli/: main.py
core/: chunking.py  confidence.py  evaluation.py  indexing.py  rag_chain.py  rag_evaluation.py  rag_pipeline.py  reranking.py  scoring.py
data/: bm25_index.py  embedding_model.py  env_loader.py  golden_set_loader.py  langsmith_setup.py  llm_client.py  rag_embeddings.py  reranker.py  script_loader.py  vector_store.py
docs/: EXPERIMENTS.md  TRD.md  code-convention.yaml
scripts/: ask.py  compare_chunking.py  run_evaluation.py  run_ragas_evaluation.py
tests/: test_bm25_index.py  test_chunking.py  test_confidence.py  test_embedding_model.py  test_env_loader.py  test_evaluation.py  test_golden_set_loader.py  test_indexing.py  test_rag_chain.py  test_rag_evaluation.py  test_rag_pipeline.py  test_reranking.py  test_scoring.py  test_script_loader.py  test_sweep_alpha.py  test_vector_store.py
(+21 files in other folders)
